objects/ssot__FinancialAccount__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicationDate__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CardAccountId__c</fullName>
        <label>Card Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DepositAccountId__c</fullName>
        <label>Deposit Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialAccountStatus__c</fullName>
        <label>Financial Account Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialAccountType__c</fullName>
        <label>Financial Account Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Financial Account Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyId__c</fullName>
        <label>Insurance Policy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvestmentAccountId__c</fullName>
        <label>Investment Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LienHolderName__c</fullName>
        <label>Lien Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoanAccountId__c</fullName>
        <label>Loan Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpenDate__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__RoutingNumberText__c</fullName>
        <label>Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TrustOwnerName__c</fullName>
        <label>Trust Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isHeldAway__c</fullName>
        <label>Held Away</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isManaged__c</fullName>
        <label>Managed</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761236248_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FinancialAccount_CardAccountId_map_C_rel</label>
        <referenceTo>ssot__CardAccount__dlm</referenceTo>
        <relationshipLabel>FinancialAccount_CardAccountId_map_C_rel</relationshipLabel>
        <relationshipName>rel_1697761236248_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761236324_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FinancialAccount_DepositAccountId_ma_rel</label>
        <referenceTo>ssot__DepositAccount__dlm</referenceTo>
        <relationshipLabel>FinancialAccount_DepositAccountId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761236324_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761236418_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FinancialAccount_InsurancePolicyId_m_rel</label>
        <referenceTo>ssot__InsurancePolicy__dlm</referenceTo>
        <relationshipLabel>FinancialAccount_InsurancePolicyId_m_rel</relationshipLabel>
        <relationshipName>rel_1697761236418_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>